Avance Navar con Tailwind

--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
     <link rel="stylesheet" href="tailwind.css">
     <title>Instalación Tailwind</title>
 </head>
-<body>
+<body class="bg-gray-500">
     
-<h1 class="text-3xl font-mono underline text-blue-500"> HALLO WELT TailwindCSS </h1>
+<header class="bg-white shadow px-6">
+<div class="flex h-16 item-center justify-between" >
+
+    <button class="text-gray-400 hover:text-blue-600 hover:bg-white transition-colors rounded p-1 m-1 focus: ring-2 focus:ring-slate-100"> <svg class="h-8 w-8"   data-slot="icon" fill="none" stroke-width="1.5" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"></path>
+      </svg>
+    </button>
+    
+      <button> theme </button>
+    <button> user </button>
+
+</div>
+
+</header>
 
 </body>
 </html>
