--- a/index.html
+++ b/index.html
@@ -7,21 +7,41 @@
     <title>Instalación Tailwind</title>
 </head>
 <body class="bg-gray-500">
-    
+ 
+  <!-- Inicio de barra de navegación (navbar) -->
 <header class="bg-white shadow px-6">
 <div class="flex h-16 item-center justify-between" >
 
+  <!-- Despliegue del menú -->
     <button class="text-gray-400 hover:text-blue-600 hover:bg-white transition-colors rounded p-1 m-1 focus: ring-2 focus:ring-slate-100"> <svg class="h-8 w-8"   data-slot="icon" fill="none" stroke-width="1.5" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
         <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"></path>
       </svg>
     </button>
-    
-      <button> theme </button>
-    <button> user </button>
+    <!-- Enlace logo -->
+    <a href="" class="text-gray-400 hover:rotate-6 duration-500"> <svg  class="h-8 w-8"  data-slot="icon" fill="none" stroke-width="1.5" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 3v1.5M4.5 8.25H3m18 0h-1.5M4.5 12H3m18 0h-1.5m-15 3.75H3m18 0h-1.5M8.25 19.5V21M12 3v1.5m0 15V21m3.75-18v1.5m0 15V21m-9-1.5h10.5a2.25 2.25 0 0 0 2.25-2.25V6.75a2.25 2.25 0 0 0-2.25-2.25H6.75A2.25 2.25 0 0 0 4.5 6.75v10.5a2.25 2.25 0 0 0 2.25 2.25Zm.75-12h9v9h-9v-9Z"></path>
+    </svg> </a>
+
+
+    <div class="flex">
+<!-- botón dark y light mode -->
+<button class=" px-1 text-gray-400 hover:bg-sky-400 hover:text-white rounded-full transition-colors focus:ring-4 focus:ring-slate-100"> <svg  class="h-8 w-8" data-slot="icon" fill="none" stroke-width="1.5" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"></path>
+</svg> </button>
+
+<!-- botón usuario loggeado -->
+<button class="ml-6 text-sky-400 hover:rotate-6 duration-500"> <img class="rounded-full h-9 w-9" src="https://ui-avatars.com/api?name=Isabel S." alt="Isabel S."> </button>
+    </div>
 
 </div>
 
+<!-- Navegación móvil -->
+<a href="" class="block rounded-md px-3 py-2 hover:bg-sky-400 hover:text-white transition-colors text-gray-400">Home</a>
+<a href="" class="block rounded-md px-3 py-2 hover:bg-sky-400 hover:text-white transition-colors text-gray-400">About</a>
+<a href="" class="block rounded-md px-3 py-2 hover:bg-sky-400 hover:text-white transition-colors text-gray-400">Blog</a>
+<a href="" class="block rounded-md px-3 py-2 hover:bg-sky-400 hover:text-white transition-colors text-gray-400">Contact</a>
 </header>
+<!-- fin barra navegación -->
 
 </body>
 </html>
